# emkeel

./: .env.example  .envrc  .gitattributes  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  emkeel.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  emkeel-ci.yml  jira-transition.yml  release.yml
docs/: install.md  lifecycle.md  review-assist.md
emkeel-governance/adr/: 0001-adopt-and-thin.md  0002-license-apache-2.0.md  0003-documentation-model.md  0004-ticket-link-verifies-jira.md  0005-governed-process-engine.md  0006-per-repo-agent-isolation.md  0007-scoped-local-credentials.md  0008-governance-doc-conventions.md  0009-strategy-reality-gate.md  0010-strategy-retiro.md  0011-ticket-first-enforced.md  0012-enforce-sprint-placement.md  0013-critique-panel.md
emkeel-governance/specs/: KEEL-10.md  KEEL-100.md  KEEL-103.md  KEEL-104.md  KEEL-105.md  KEEL-106.md  KEEL-107.md  KEEL-109.md  KEEL-11.md  KEEL-110.md  KEEL-114.md  KEEL-115.md  KEEL-116.md  KEEL-117.md  KEEL-118.md  KEEL-120.md  KEEL-17.md  KEEL-19.md  KEEL-2.md  KEEL-22.md  KEEL-23.md  KEEL-3.md  KEEL-33.md  KEEL-34.md  KEEL-35.md  KEEL-36.md  KEEL-37.md  KEEL-38.md  KEEL-39.md  KEEL-4.md  KEEL-41.md  KEEL-42.md  KEEL-43.md  KEEL-44.md  KEEL-45.md  KEEL-46.md  KEEL-47.md  KEEL-48.md  KEEL-49.md  KEEL-5.md  (+41 more)
emkeel-governance/strategy/: governance-doc-conventions.md  governance-doc-conventions.process.json
governance/adr/: 0001-adopt-and-thin.md
src/emkeel/: __init__.py  cli.py  connect.py  doctor.py  i18n.py  init.py  isolation.py  jira.py  lanes.py  process.py  review.py  setcfg.py  ship.py  start.py  strategy.py  sync.py  ui.py  uninstall.py  update.py  version.py  wizard.py
tests/: test_check_acceptance_criteria.py  test_check_critical_integration.py  test_check_dependabot_scope.py  test_check_doc_conventions.py  test_check_maint_scope.py  test_check_plan_present.py  test_check_strategy_alignment.py  test_check_strategy_change.py  test_check_strategy_link.py  test_check_strategy_process.py  test_check_strategy_quality.py  test_check_ticket_link.py  test_check_ticket_placed.py  test_check_ticket_precedes_work.py  test_cli.py  test_connect.py  test_doctor.py  test_init.py  test_isolation.py  test_jira.py  test_jira_describe.py  test_jira_place.py  test_lanes.py  test_process.py  test_review.py  test_self_agents_contract.py  test_setcfg.py  test_ship.py  test_start.py  test_strategy.py  test_strategy_auth_regression.py  test_strategy_process.py  test_sync.py  test_ui.py  test_uninstall.py  test_update.py  test_version.py  test_wizard.py
tests/integration/: test_agent_contract_sprint_sync.py  test_creds_to_jira_create.py  test_critique_panel.py  test_distributed_contract.py  test_ticket_placed.py  (+9 more)
(+17 files in other folders)
