[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emkeel"
version = "0.1.0"
description = "Adopt-and-thin SDLC governance framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "EMillion Networking LTD" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
# SEPARACIÓN: solo el código se empaqueta. emkeel-governance/ NUNCA entra al paquete.
packages = ["src/emkeel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
