[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emkeel"
version = "0.1.44"
description = "Adopt-and-thin SDLC governance framework"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "EMillion Networking LTD" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
emkeel = "emkeel.cli:main"

[tool.hatch.build.targets.wheel]
# SEPARACIÓN: solo el código se empaqueta. emkeel-governance/ NUNCA entra al paquete.
packages = ["src/emkeel"]

[tool.hatch.build.targets.sdist]
# Allowlist: the SOURCE distribution ships ONLY the distributable essentials.
# emkeel-governance/, docs/, tests/, .github/ never leave the (private) repo.
# (NOTE: .gitattributes export-ignore does NOT affect the sdist — this allowlist does.)
include = [
  "src/emkeel",
  "docs",
  "README.md",
  "LICENSE",
  "NOTICE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
